--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@ html{
 }
 
 .app{
+	height: 100vh;
     background: black;
     display: grid;
     place-items: center;
@@ -14,6 +15,7 @@ html{
     position: relative;
     overflow: scroll;
     border-radius: 20px;
+	scroll-snap-type: y mandatory;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
