--- a/src/Video.css
+++ b/src/Video.css
@@ -1,4 +1,23 @@
 .video{
 	position: relative;
 	scroll-snap-align: start;
+	background-color: white;
+	width: 100%;
+	height: 100%;
+	text-shadow: 0 0 4px rgba(0,0,0,0.5);
+}
+
+.player {
+	position: absolute;
+	object-fit: fill;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.bottom-controls {
+	display: flex;
+	align-items: flex-end;
+	height: 100%;
 }
